welcome.lessons.welcome.bat.bool1.CountTeen.scala.error
countTeen:3: error: ')' expected but $XMLSTART$< found.
  if (12 <a && a < 21){NbAdo = NbAdo + 1}
         ^countTeen:7: error: illegal start of simple expression
	return NbAdo}
                    ^